--- a/tb_genta.html
+++ b/tb_genta.html
@@ -7,14 +7,14 @@
     Tutorial 4
     Tutorial Case
     
-    Photo Page of Suzuko Komatsu
+    Photo Page of Genta Komatsu
+    Author: Chris Kim 
+    Date:   10.30.18
 
-    Filename: tb_suzuko.html
+    Filename: tb_genta.html
    -->
     <meta charset="utf-8" />
-    <title>Tree and Book: Suzuko (Endo) Komatsu</title>
-    <link href="tb_reset.css" rel="stylesheet" type="text/css" />
-    <link href="tb_styles2.css" rel="stylesheet" type="text/css" />
+    <title>Tree and Book: Genta Komatsu</title>
 
 </head>
 
@@ -38,10 +38,21 @@
 
 
     <article>
-        <h1>Suzuko (Endo) Komatsu</h1>
+        <h1>Genta Komatsu</h1>
+
         <figure id="figure1">
-            <img id="family" src="tb_suzuko1.png" alt="" />
-            <figcaption>Suzuko (Endo) Komatsu (2015 photo)</figcaption>
+            <img src="tb_genta1.png" alt="" />
+            <figcaption>Genta Komatsu (2007 photo)</figcaption>
+        </figure>
+
+        <figure id="figure2">
+            <img src="tb_genta2.png" alt="" id="genta2" />
+            <figcaption>Genta &amp; Hiroji (2009 photo)</figcaption>
+        </figure>
+
+        <figure id="figure3">
+            <img src="tb_genta3.png" alt="" id="genta3" />
+            <figcaption>Genta &amp; Ikko (2010 photo)</figcaption>
         </figure>
 
         <p><a href="index.html">Return to the Komatsu Home Page</a></p>
