Gradients, box shadows, and transformations

--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
         <section>Tree and Book &copy; 2017 English (US)</section>
     </footer>
 
+    <!-- <div id="radial">
+        <article>
+
+        </article>
+    </div> -->
+
 </body>
 
 </html>
